TechNova2026/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: technova
  labels:
    app.kubernetes.io/part-of: technova2026
