TechNova2026/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: technova-web
  namespace: technova
  labels:
    app: technova-web
spec:
  type: NodePort
  selector:
    app: technova-web
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
