TechNova2026/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technova-web
  namespace: technova
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: technova.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technova-web
                port:
                  number: 80
